<resources>
    <string name="app_name">TrainingApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_email_hint">Email@Email.com</string>
    <string name="login_password_hint">******</string>
    <string name="login_forgot_password_text">Esqueci a senha</string>
    <string name="login_create_account_text">Não tenho conta</string>
    <string name="login_login_button">Login</string>
    <string name="btn_send">Enviar</string>
    <string name="register_fragment_btn_create_account">Criar conta</string>

    <!-- comuns  -->
    <string name="bottom_sheet_tv_warning">Atenção</string>
    <string name="bottom_sheet_btn_warning">Entendi</string>
    <string name="email_empty">Digite um E-mail</string>
    <string name="empty_password">Digite uma senha</string>

    <!-- TabLayout-->
    <string name="training_fragment">Treinos</string>
    <string name="historic_fragment">Histórico</string>
    <string name="instruction_fragment">Intruções</string>



    <!-- Errors FireBase Authentication-->
    <string name="account_not_registered">Nenhuma conta encontrada com esse E-mail</string>
    <string name="invalid_email">Insira um e-mail válido </string>
    <string name="invalid_password">Senha invalida, verifique sua senha</string>
    <string name="email_in_use">Estes e-mail já está em uso</string>
    <string name="strong_password">Insira uma senha mais forte</string>
    <string name="error_generic">Ocorreu um erro, por favor tente novamente! </string>
    <string name="register_fragment_email_invalid_text">E-mail Invalido</string>
    <string name="register_fragment_email_not_match">E-mails Não conferem</string>
    <string name="register_fragment_password_not_match">Senhas não conferem</string>


    <string name="recover_fragment_recover_account_text">Recupere sua senha digitando o email cadastrado abaixo. \n Você receberá um e-mail para criar uma nova senha.</string>
    <string name="recover_fragment_recover_email">E-mail de recuperação enviado para sua caixa de mensagens</string>
    <string name="recover_fragment_email_empty">Digite o E-mail para recuperação de senha</string>
    <string name="recover_fragment_bottom_sheet_title">Recuperação de senha</string>


</resources>